--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "appwrite": "^15.0.0",
     "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "next": "14.2.5",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
